kind/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cockroachdb-client-secure
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cockroachdb-tls-example
    app.kubernetes.io/name: cockroachdb
spec:
  serviceAccountName: cockroach-operator-sa
  containers:
  - name: cockroachdb-client-secure
    image: cockroachdb/cockroach:v20.2.8
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: client-certs
      mountPath: /cockroach/cockroach-certs/
    command:
    - sleep
    - "2147483648" # 2^31
  terminationGracePeriodSeconds: 0
  volumes:
  - name: client-certs
    projected:
        sources:
          - secret:
              name: cockroachdb-tls-example-node
              items:
                - key: ca.crt
                  path: ca.crt
          - secret:
              name: cockroachdb-tls-example-root
              items:
                - key: tls.crt
                  path: client.root.crt
                - key: tls.key
                  path: client.root.key
        defaultMode: 256
