kind/030-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cockroachdb-ui
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    # public name of the domain
    - cockroachdb-public
    secretName: tls-cockroachdb-ui
  rules:
  - host: cockroachdb-public
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cockroachdb-public
            port:
              name: http
